--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
 
             </div>
-            <div class="row">
-                <div class="col">
+            <div class="row d-flex">
+                <div class="col-8">
                     <table class="table table-striped ">
                         <thead>
                             <tr>
@@ -278,6 +278,105 @@
                         </tbody>
 
                     </table>
+
+
+                </div>
+                <div class="col-4">
+                    <div class="card">
+                        <div class="card-body">
+
+                            <div class="card-header">
+                                <h4 class="card-title">Todo</h4>
+                            </div>
+                            <ul class="list-group">
+                                <li class="list-group-item">
+                                    <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckbox">
+                                    <label class="form-check-label" for="firstCheckbox">First checkbox</label>
+                                </li>
+                                <li class="list-group-item">
+                                    <input class="form-check-input me-1" type="checkbox" value="" id="secondCheckbox">
+                                    <label class="form-check-label" for="secondCheckbox">Second checkbox</label>
+                                </li>
+                                <li class="list-group-item">
+                                    <input class="form-check-input me-1" type="checkbox" value="" id="thirdCheckbox">
+                                    <label class="form-check-label" for="thirdCheckbox">Third checkbox</label>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+
+                            <div class="card-header">
+                                <h4 class="card-title">F.A.Q.</h4>
+                            </div>
+                            <div class="accordion" id="accordionExample">
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header">
+                                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                            data-bs-target="#collapseOne" aria-expanded="true"
+                                            aria-controls="collapseOne">
+                                            Come aggiungere un nuovo libro?
+                                        </button>
+                                    </h2>
+                                    <div id="collapseOne" class="accordion-collapse collapse show"
+                                        data-bs-parent="#accordionExample">
+                                        <div class="accordion-body">
+                                            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit repellat
+                                                at placeat accusantium beatae ad ratione quaerat natus eos? Iste neque,
+                                                sapiente adipisci, deserunt numquam, ea excepturi a molestiae illo
+                                                quibusdam ducimus repellat placeat dolores inventore reiciendis nemo cum
+                                                animi quae laborum debitis corrupti doloremque distinctio atque veniam?
+                                                Dicta, veritatis?</P>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header">
+                                        <button class="accordion-button collapsed" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#collapseTwo"
+                                            aria-expanded="false" aria-controls="collapseTwo">
+                                            Come posso accedere all'anagrafica utenti?
+                                        </button>
+                                    </h2>
+                                    <div id="collapseTwo" class="accordion-collapse collapse"
+                                        data-bs-parent="#accordionExample">
+                                        <div class="accordion-body">
+                                            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit repellat
+                                                at placeat accusantium beatae ad ratione quaerat natus eos? Iste neque,
+                                                sapiente adipisci, deserunt numquam, ea excepturi a molestiae illo
+                                                quibusdam ducimus repellat placeat dolores inventore reiciendis nemo cum
+                                                animi quae laborum debitis corrupti doloremque distinctio atque veniam?
+                                                Dicta, veritatis?</P>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header">
+                                        <button class="accordion-button collapsed" type="button"
+                                            data-bs-toggle="collapse" data-bs-target="#collapseThree"
+                                            aria-expanded="false" aria-controls="collapseThree">
+                                            Posso usare questa dashboard da mobile?
+                                        </button>
+                                    </h2>
+                                    <div id="collapseThree" class="accordion-collapse collapse"
+                                        data-bs-parent="#accordionExample">
+                                        <div class="accordion-body">
+                                            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit repellat
+                                                at placeat accusantium beatae ad ratione quaerat natus eos? Iste neque,
+                                                sapiente adipisci, deserunt numquam, ea excepturi a molestiae illo
+                                                quibusdam ducimus repellat placeat dolores inventore reiciendis nemo cum
+                                                animi quae laborum debitis corrupti doloremque distinctio atque veniam?
+                                                Dicta, veritatis?</P>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+
+                        </div>
+                    </div>
 
                 </div>
             </div>
