Modifica la struttura delle colonne e aggiorna le etichette delle checkbox nella sezione F.A.Q.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
             </div>
             <div class="row d-flex">
-                <div class="col-8">
+                <div class="col col-sm-12 col-md-12- col-lg-8">
                     <table class="table table-striped ">
                         <thead>
                             <tr>
@@ -281,8 +281,8 @@
 
 
                 </div>
-                <div class="col-4">
-                    <div class="card">
+                <div class="col col-sm-12 col-md-12 col-lg-4 ">
+                    <div class="card w-100">
                         <div class="card-body">
 
                             <div class="card-header">
@@ -291,21 +291,22 @@
                             <ul class="list-group">
                                 <li class="list-group-item">
                                     <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckbox">
-                                    <label class="form-check-label" for="firstCheckbox">First checkbox</label>
+                                    <label class="form-check-label" for="firstCheckbox">Chiamare segreteria</label>
                                 </li>
                                 <li class="list-group-item">
                                     <input class="form-check-input me-1" type="checkbox" value="" id="secondCheckbox">
-                                    <label class="form-check-label" for="secondCheckbox">Second checkbox</label>
+                                    <label class="form-check-label" for="secondCheckbox">Mandare avvisi prestiti
+                                        scaduti</label>
                                 </li>
                                 <li class="list-group-item">
                                     <input class="form-check-input me-1" type="checkbox" value="" id="thirdCheckbox">
-                                    <label class="form-check-label" for="thirdCheckbox">Third checkbox</label>
+                                    <label class="form-check-label" for="thirdCheckbox">Ordinare nuovi libri</label>
                                 </li>
                             </ul>
                         </div>
                     </div>
                     <div class="card">
-                        <div class="card-body">
+                        <div class="card-body ">
 
                             <div class="card-header">
                                 <h4 class="card-title">F.A.Q.</h4>
@@ -313,7 +314,7 @@
                             <div class="accordion" id="accordionExample">
                                 <div class="accordion-item">
                                     <h2 class="accordion-header">
-                                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                        <button class="accordion-button py-4" type="button" data-bs-toggle="collapse"
                                             data-bs-target="#collapseOne" aria-expanded="true"
                                             aria-controls="collapseOne">
                                             Come aggiungere un nuovo libro?
@@ -333,7 +334,7 @@
                                 </div>
                                 <div class="accordion-item">
                                     <h2 class="accordion-header">
-                                        <button class="accordion-button collapsed" type="button"
+                                        <button class="accordion-button collapsed py-4" type="button"
                                             data-bs-toggle="collapse" data-bs-target="#collapseTwo"
                                             aria-expanded="false" aria-controls="collapseTwo">
                                             Come posso accedere all'anagrafica utenti?
@@ -353,7 +354,7 @@
                                 </div>
                                 <div class="accordion-item">
                                     <h2 class="accordion-header">
-                                        <button class="accordion-button collapsed" type="button"
+                                        <button class="accordion-button collapsed py-4" type="button"
                                             data-bs-toggle="collapse" data-bs-target="#collapseThree"
                                             aria-expanded="false" aria-controls="collapseThree">
                                             Posso usare questa dashboard da mobile?
