--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
     </header>
     <main>
         <div class="container border border-primary m-0-auto mt-5">
-            <div class="title_row pb-5 d-flex justify-content-between align-items-center">
-                <h1>Catalogo Libri</h1>
-                <div class="button"><a class="btn btn-primary" href="#" role="button">Button</a></div>
 
-
-            </div>
             <div class="row d-flex">
-                <div class="col col-sm-12 col-md-12- col-lg-8">
+
+                <div class="col-12 col-sm-12 col-md-12- col-lg-8">
+                    <div class="title_row pb-5 d-flex justify-content-between align-items-center">
+                        <h1>Catalogo Libri</h1>
+                        <div class="button"><a class="btn btn-primary" href="#" role="button">Aggiungi Libro</a></div>
+                    </div>
                     <table class="table table-striped ">
                         <thead>
                             <tr>
@@ -281,7 +281,7 @@
 
 
                 </div>
-                <div class="col col-sm-12 col-md-12 col-lg-4 ">
+                <div class="col-12 col-sm-12 col-md-12 col-lg-4 ">
                     <div class="card w-100">
                         <div class="card-body">
 
