--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-            <div class="container">
-                <a class="navbar-brand w-auto" href="#">Logo</a>
+            <div class="container-fluid ">
+                <a class="navbar-brand w-65" href="#"><img src="./img/duck.png" alt="logo" style="width: 60px;"></a>
                 <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -34,15 +34,27 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavId">
                     <ul class="navbar-nav me-auto mt-2 mt-lg-0">
                         <li class="nav-item">
+                            <a class="nav-link active" href="#" aria-current="page">Catalogo Libri
+                                <span class="visually-hidden">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="#" aria-current="page">Anagrafica Utenti
+                                <span class="visually-hidden">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" aria-current="page">Storico Prestiti
+                                <span class="visually-hidden">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" aria-current="page">Help
                                 <span class="visually-hidden">(current)</span></a>
                         </li>
 
                     </ul>
                     <form class="d-flex my-2 my-lg-0">
-                        <input class="form-control me-sm-2" type="text" placeholder="Search" />
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-                            Search
+                        <input class="form-control me-sm-2" type="text" placeholder="Cerca..." />
+                        <button class="btn btn-outline-light my-2 my-sm-0" type="submit">
+                            Cerca
                         </button>
                     </form>
                 </div>
@@ -282,7 +294,7 @@
 
                 </div>
                 <div class="col-12 col-sm-12 col-md-12 col-lg-4 ">
-                    <div class="card w-100">
+                    <div class="card  border-0">
                         <div class="card-body">
 
                             <div class="card-header">
@@ -305,11 +317,11 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="card">
+                    <div class="card border-0">
                         <div class="card-body ">
 
-                            <div class="card-header">
-                                <h4 class="card-title">F.A.Q.</h4>
+                            <div class="card-header border-0 ">
+                                <h4 class="card-title ">F.A.Q.</h4>
                             </div>
                             <div class="accordion" id="accordionExample">
                                 <div class="accordion-item">
