Aggiorna la tabella dei libri con titoli specifici, modifica lo stato di disponibilità e migliora lo stile dei pulsanti

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     </header>
     <main>
-        <div class="container border border-primary m-0-auto mt-5">
+        <div class="container  m-0-auto mt-5">
 
             <div class="row d-flex">
 
@@ -83,10 +83,11 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td class="w-50">Titolo del livbro</td>
-                                <td class="d-none d-md-table-cell">data prestito</td>
+                                <td class="w-50">I pilastri della terra</td>
+                                <td class="d-none d-md-table-cell">-</td>
                                 <td>
-                                    <button type="button" class="btn btn-success btn-sm py-0 ">
+                                    <button type="button"
+                                        class="btn btn-success btn-sm py-0 rounded text-white fw-semibold">
                                         Disponibile</button>
                                 </td>
                                 <td class="d-flex justify-content-center gap-2"><button type="button"
@@ -100,10 +101,11 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td class="w-50">Titolo del livbro</td>
-                                <td class="d-none d-md-table-cell">data prestito</td>
+                                <td class="w-50">I promessi sposi</td>
+                                <td class="d-none d-md-table-cell">-</td>
                                 <td>
-                                    <button type="button" class="btn btn-success btn-sm py-0 ">
+                                    <button type="button"
+                                        class="btn btn-success btn-sm py-0 rounded text-white fw-semibold">
                                         Disponibile</button>
                                 </td>
                                 <td class="d-flex justify-content-center gap-2"><button type="button"
@@ -117,10 +119,29 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td class="w-50">Titolo del livbro</td>
-                                <td class="d-none d-md-table-cell">data prestito</td>
+                                <td class="w-50">Il signore degli anelli</td>
+                                <td class="d-none d-md-table-cell">18/10/2023</td>
                                 <td>
-                                    <button type="button" class="btn btn-success btn-sm py-0 ">
+                                    <button type="button"
+                                        class="btn btn-warning btn-sm py-0 rounded text-white fw-semibold">
+                                        In prestito</button>
+                                </td>
+                                <td class="d-flex justify-content-center gap-2"><button type="button"
+                                        class="btn btn-outline-secondary "><i class="fa fa-pencil "
+                                            aria-hidden="true"></i>
+                                    </button>
+                                    <button type="button" class="btn btn-outline-secondary"> <i class="fa fa-trash"
+                                            aria-hidden="true"></i>
+                                    </button>
+
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="w-50">Harry Potter e la pietra Filosofale</td>
+                                <td class="d-none d-md-table-cell">-</td>
+                                <td>
+                                    <button type="button"
+                                        class="btn btn-success btn-sm py-0 rounded text-white fw-semibold ">
                                         Disponibile</button>
                                 </td>
                                 <td class="d-flex justify-content-center gap-2"><button type="button"
@@ -134,10 +155,29 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td class="w-50">Titolo del livbro</td>
-                                <td class="d-none d-md-table-cell">data prestito</td>
+                                <td class="w-50">Il codice Da Vinci</td>
+                                <td class="d-none d-md-table-cell">-</td>
                                 <td>
-                                    <button type="button" class="btn btn-success btn-sm py-0 ">
+                                    <button type="button"
+                                        class="btn btn-danger btn-sm py-0 rounded text-white fw-semibold">
+                                        Non disponibile</button>
+                                </td>
+                                <td class="d-flex justify-content-center gap-2"><button type="button"
+                                        class="btn btn-outline-secondary "><i class="fa fa-pencil "
+                                            aria-hidden="true"></i>
+                                    </button>
+                                    <button type="button" class="btn btn-outline-secondary"> <i class="fa fa-trash"
+                                            aria-hidden="true"></i>
+                                    </button>
+
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="w-50">Shining</td>
+                                <td class="d-none d-md-table-cell">-</td>
+                                <td>
+                                    <button type="button"
+                                        class="btn btn-success btn-sm py-0  rounded text-white fw-semibold">
                                         Disponibile</button>
                                 </td>
                                 <td class="d-flex justify-content-center gap-2"><button type="button"
@@ -151,10 +191,29 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td class="w-50">Titolo del livbro</td>
-                                <td class="d-none d-md-table-cell">data prestito</td>
+                                <td class="w-50">La divina commedia</td>
+                                <td class="d-none d-md-table-cell">21/09/2023</td>
                                 <td>
-                                    <button type="button" class="btn btn-success btn-sm py-0 ">
+                                    <button type="button"
+                                        class="btn btn-warning btn-sm py-0 rounded text-white fw-semibold ">
+                                        In prestito</button>
+                                </td>
+                                <td class="d-flex justify-content-center gap-2"><button type="button"
+                                        class="btn btn-outline-secondary "><i class="fa fa-pencil "
+                                            aria-hidden="true"></i>
+                                    </button>
+                                    <button type="button" class="btn btn-outline-secondary"> <i class="fa fa-trash"
+                                            aria-hidden="true"></i>
+                                    </button>
+
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="w-50">Il trono di spade</td>
+                                <td class="d-none d-md-table-cell">-</td>
+                                <td>
+                                    <button type="button"
+                                        class="btn btn-success btn-sm py-0 rounded text-white fw-semibold ">
                                         Disponibile</button>
                                 </td>
                                 <td class="d-flex justify-content-center gap-2"><button type="button"
@@ -168,10 +227,47 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td class="w-50">Titolo del livbro</td>
-                                <td class="d-none d-md-table-cell">data prestito</td>
+                                <td class="w-50">Il mondo di Sofia</td>
+                                <td class="d-none d-md-table-cell">-</td>
                                 <td>
-                                    <button type="button" class="btn btn-success btn-sm py-0 ">
+                                    <button type="button"
+                                        class="btn btn-danger btn-sm py-0 rounded text-white fw-semibold">
+                                        Non disponibile</button>
+                                </td>
+                                <td class="d-flex justify-content-center gap-2"><button type="button"
+                                        class="btn btn-outline-secondary "><i class="fa fa-pencil "
+                                            aria-hidden="true"></i>
+                                    </button>
+                                    <button type="button" class="btn btn-outline-secondary"> <i class="fa fa-trash"
+                                            aria-hidden="true"></i>
+                                    </button>
+
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="w-50">Le cronache di Narnia: il leone, la strega e l'armadio</td>
+                                <td class="d-none d-md-table-cell">25/07/2023</td>
+                                <td>
+                                    <button type="button"
+                                        class="btn btn-warning btn-sm py-0 rounded text-white fw-semibold ">
+                                        In prestito</button>
+                                </td>
+                                <td class="d-flex justify-content-center gap-2"><button type="button"
+                                        class="btn btn-outline-secondary "><i class="fa fa-pencil "
+                                            aria-hidden="true"></i>
+                                    </button>
+                                    <button type="button" class="btn btn-outline-secondary"> <i class="fa fa-trash"
+                                            aria-hidden="true"></i>
+                                    </button>
+
+                                </td>
+                            </tr>
+                            <tr>
+                                <td class="w-50">Il piccolo Principe</td>
+                                <td class="d-none d-md-table-cell">-</td>
+                                <td>
+                                    <button type="button"
+                                        class="btn btn-success btn-sm py-0 rounded text-white fw-semibold">
                                         Disponibile</button>
                                 </td>
                                 <td class="d-flex justify-content-center gap-2"><button type="button"
@@ -185,95 +281,11 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td class="w-50">Titolo del livbro</td>
-                                <td class="d-none d-md-table-cell">data prestito</td>
+                                <td class="w-50">la storia infinita</td>
+                                <td class="d-none d-md-table-cell">-</td>
                                 <td>
-                                    <button type="button" class="btn btn-success btn-sm py-0 ">
-                                        Disponibile</button>
-                                </td>
-                                <td class="d-flex justify-content-center gap-2"><button type="button"
-                                        class="btn btn-outline-secondary "><i class="fa fa-pencil "
-                                            aria-hidden="true"></i>
-                                    </button>
-                                    <button type="button" class="btn btn-outline-secondary"> <i class="fa fa-trash"
-                                            aria-hidden="true"></i>
-                                    </button>
-
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="w-50">Titolo del livbro</td>
-                                <td class="d-none d-md-table-cell">data prestito</td>
-                                <td>
-                                    <button type="button" class="btn btn-success btn-sm py-0 ">
-                                        Disponibile</button>
-                                </td>
-                                <td class="d-flex justify-content-center gap-2"><button type="button"
-                                        class="btn btn-outline-secondary "><i class="fa fa-pencil "
-                                            aria-hidden="true"></i>
-                                    </button>
-                                    <button type="button" class="btn btn-outline-secondary"> <i class="fa fa-trash"
-                                            aria-hidden="true"></i>
-                                    </button>
-
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="w-50">Titolo del livbro</td>
-                                <td class="d-none d-md-table-cell">data prestito</td>
-                                <td>
-                                    <button type="button" class="btn btn-success btn-sm py-0 ">
-                                        Disponibile</button>
-                                </td>
-                                <td class="d-flex justify-content-center gap-2"><button type="button"
-                                        class="btn btn-outline-secondary "><i class="fa fa-pencil "
-                                            aria-hidden="true"></i>
-                                    </button>
-                                    <button type="button" class="btn btn-outline-secondary"> <i class="fa fa-trash"
-                                            aria-hidden="true"></i>
-                                    </button>
-
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="w-50">Titolo del livbro</td>
-                                <td class="d-none d-md-table-cell">data prestito</td>
-                                <td>
-                                    <button type="button" class="btn btn-success btn-sm py-0 ">
-                                        Disponibile</button>
-                                </td>
-                                <td class="d-flex justify-content-center gap-2"><button type="button"
-                                        class="btn btn-outline-secondary "><i class="fa fa-pencil "
-                                            aria-hidden="true"></i>
-                                    </button>
-                                    <button type="button" class="btn btn-outline-secondary"> <i class="fa fa-trash"
-                                            aria-hidden="true"></i>
-                                    </button>
-
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="w-50">Titolo del livbro</td>
-                                <td class="d-none d-md-table-cell">data prestito</td>
-                                <td>
-                                    <button type="button" class="btn btn-success btn-sm py-0 ">
-                                        Disponibile</button>
-                                </td>
-                                <td class="d-flex justify-content-center gap-2"><button type="button"
-                                        class="btn btn-outline-secondary "><i class="fa fa-pencil "
-                                            aria-hidden="true"></i>
-                                    </button>
-                                    <button type="button" class="btn btn-outline-secondary"> <i class="fa fa-trash"
-                                            aria-hidden="true"></i>
-                                    </button>
-
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="w-50">Titolo del livbro</td>
-                                <td class="d-none d-md-table-cell">data prestito</td>
-                                <td>
-                                    <button type="button" class="btn btn-success btn-sm py-0 ">
+                                    <button type="button"
+                                        class="btn btn-success btn-sm py-0 rounded text-white fw-semibold  ">
                                         Disponibile</button>
                                 </td>
                                 <td class="d-flex justify-content-center gap-2"><button type="button"
