Rimuovi testo non necessario e aggiungi un div per la sezione di controllo

--- a/bonus/page_form.html
+++ b/bonus/page_form.html
@@ -115,8 +115,10 @@
                     <textarea class="form-control" placeholder="Inseros" style="height: 100px"></textarea>
                     <label for="">Note</label>
                 </div>
-                bs
+
+
             </div>
+            <div class="check"></div>
 
         </div>
     </main>
